--- a/test.html
+++ b/test.html
@@ -407,16 +407,17 @@
         <circle cx="17.5" cy="6.5" r="1.2"></circle>
       </svg>
     </button>
-
-    <!-- FAB WhatsApp -->
-    <button id="waFab" class="fab-wa" title="Apri Canale WhatsApp" aria-label="Apri Canale WhatsApp">
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <!-- cerchio esterno -->
-        <circle cx="12" cy="12" r="9"></circle>
-        <!-- cornetta classica -->
-        <path d="M15.6 14.2c-.2.6-1.1 1.3-1.8 1.3-.7 0-1.8-.4-3.1-1.1-1.3-.7-2.4-2.1-2.8-2.6-.4-.5-1.1-1.6-1.1-2.3s.4-1.1.6-1.3c.2-.2.5-.4.8-.4.3 0 .5.1.7.2.2.1.4 1 .7 1.5.2.4.1.6 0 .8-.1.2-.4.5-.5.6-.1.1-.2.3 0 .6.2.3 1 1.5 2.2 2.1 1.2.6 1.5.6 1.9.4.3-.2.8-.9 1-1.1.2-.2.4-.2.6-.1.2.1 1.5.7 1.8.9.2.1.3.2.3.3 0 .3-.1.7-.3 1z"></path>
-      </svg>
-    </button>
+<!-- FAB WhatsApp -->
+<button id="waFab" class="fab-wa" title="Apri Canale WhatsApp" aria-label="Apri Canale WhatsApp">
+  <svg viewBox="0 0 24 24" aria-hidden="true">
+    <!-- BOLLA con CODINO (outline) -->
+    <circle cx="12" cy="12" r="9"></circle>
+    <!-- codino in basso a sinistra -->
+    <path d="M6.2 18.2 L4.1 20.1 L4.8 17.2" />
+    <!-- CORNETTA (classica) -->
+    <path d="M15.7 14.3c-.2.6-1.2 1.3-1.9 1.3s-1.9-.4-3.2-1.2c-1.3-.7-2.5-2.1-2.9-2.7-.4-.6-1.1-1.6-1.1-2.3s.4-1.1.6-1.3.5-.4.8-.4.6.1.8.2.5 1 .7 1.5c.2.4.2.6 0 .9-.1.2-.5.5-.6.7-.1.1-.2.3 0 .6.2.3 1 1.6 2.2 2.2 1.2.6 1.6.6 2 .4.3-.2.9-1 1.1-1.2.2-.2.4-.2.6-.1.2.1 1.6.7 1.9.9.2.1.3.2.3.3 0 .3-.1.7-.3 1z"/>
+  </svg>
+</button>
   </div>
 
 <script>
