--- a/countdown.html
+++ b/countdown.html
@@ -23,13 +23,24 @@
     overflow:hidden; border-radius:18px; background:#0b0c11; box-shadow:0 25px 80px rgba(0,0,0,.6);
     container-type:size;
   }
-  .stadium{
-    position:absolute; inset:0; z-index:0;
-    background:
-      radial-gradient(1200px 220px at 50% -40px, var(--roof-glow), transparent 60%),
-      linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
+
+  /* === Video di sfondo === */
+  #bg-video{
+    position:absolute; inset:0;
+    width:100%; height:100%; object-fit:cover;
+    z-index:0;                          /* sotto a tutto il resto */
+    filter:brightness(.32) contrast(1.05) saturate(1.05);
+    background:#0b0c11;                 /* fallback quando il video non è ancora carico */
   }
-  .roof-stripes{ position:absolute; inset:0; z-index:1; pointer-events:none; display:block; }
+
+  /* Overlay/atmosfera sopra al video (semi-trasparente) */
+  .stadium{
+    position:absolute; inset:0; z-index:1; pointer-events:none;
+    background:
+      radial-gradient(1200px 220px at 50% -40px, var(--roof-glow), rgba(0,0,0,0) 60%),
+      linear-gradient(to bottom, rgba(31,37,49,.66) 0%, rgba(21,25,35,.78) 48%, rgba(6,16,7,.92) 100%);
+  }
+  .roof-stripes{ position:absolute; inset:0; z-index:2; pointer-events:none; display:block; }
 
   .wrap{
     position:absolute; inset:0; z-index:4;
@@ -120,6 +131,13 @@
 </head>
 <body>
   <div class="stage">
+    <!-- 🎥 Video di sfondo -->
+    <video id="bg-video" autoplay muted loop playsinline preload="metadata">
+      <source src="video_2025-09-02_23-14-49.mp4" type="video/mp4">
+      <!-- Fallback semplice per browser molto vecchi -->
+    </video>
+
+    <!-- Overlay/atmosfera -->
     <div class="stadium"></div>
 
     <!-- Strisce diagonali -->
